# .files

./: .gitignore  PLAN.md  README.md  index.html  package-lock.json  package.json  playground-themes.html
docs/: lessons-learned.md
docs/plans/: 2026-03-07-file-preview-design.md  2026-03-07-file-preview-plan.md  2026-03-07-phase7-implementation.md  2026-03-07-phase7-integration-design.md  2026-03-08-custom-themes-design.md  2026-03-08-custom-themes-plan.md  2026-03-09-font-management-design.md  2026-03-09-font-management-plan.md  2026-03-20-v0.4.0-features-design.md  2026-03-20-v0.4.0-implementation.md  PHASE5-REMAINING.md
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.py  icon.icns
src-tauri/nsis/: installer.nsh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archive.rs  clipboard.rs  cloud.rs  context_ops.rs  extras.rs  file_ops.rs  filesystem.rs  fonts.rs  git.rs  mod.rs  properties.rs  registry.rs  search.rs  settings.rs  shell.rs  terminal.rs  watcher.rs
src-tauri/src/models/: file_entry.rs  mod.rs  settings.rs
src-tauri/src/utils/: mod.rs  natural_sort.rs  path_utils.rs
src/api/: archive.ts  clipboard.ts  cloud.ts  contextOps.ts  dragdrop.ts  extras.ts  fileOps.ts  filesystem.ts  fonts.ts  git.ts  properties.ts  registry.ts  search.ts  settings.ts  shell.ts  terminal.ts  watcher.ts
src/components/common/: CommandPalette.tsx  FileIcon.tsx  FuzzySearch.tsx  ProgressPanel.tsx  StatusBar.tsx
src/components/explorer/: BatchRename.tsx  ConflictDialog.tsx  ContextMenu.tsx  ExplorerTab.tsx  FileGrid.tsx  FlatView.tsx  GalleryView.tsx  InlineRename.tsx  MillerColumns.tsx  PropertiesPanel.tsx  RecycleBinView.tsx  ThisPcView.tsx  TilesView.tsx  Toolbar.tsx  TreemapView.tsx
src/components/layout/: PanelContainer.tsx  PanelContent.tsx  PanelSplitter.tsx  PanelTabBar.tsx
src/components/preview/: CodePreview.tsx  DocxPreview.tsx  FolderPreview.tsx  ImagePreview.tsx  MarkdownPreview.tsx  MediaPreview.tsx  PdfPreview.tsx  PreviewPanel.tsx  PreviewRenderer.tsx  QuickPreview.tsx  SvgPreview.tsx  XlsxPreview.tsx
src/components/settings/: SettingsPanel.tsx
src/data/: dailyVerses.ts
src/hooks/: useHotkeys.ts  useTheme.ts  useVirtualScroll.ts
src/stores/: explorer.ts  folderViews.ts  git.ts  layout.ts  panels.ts  preview.ts  recents.ts  settings.ts  tabs.ts  undo.ts
src/theme/: shikiTheme.ts  themes.ts  tokens.css
src/utils/: fileType.ts
tasks/: todo.md
(+7 files in other folders)
