[package]
name = "dotfiles"
version = "0.1.0"
description = ".files — Windows file explorer replacement"
authors = ["Jimmy CrakCrn"]
edition = "2021"

[lib]
name = "dotfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
notify = "6"
notify-debouncer-full = "0.3"
portable-pty = "0.8"
fuzzy-matcher = "0.3"
dirs = "5"
chrono = "0.4"
natord = "1.0"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
