[package]
name = "dotfiles"
version = "0.1.0"
description = ".files — Windows file explorer replacement"
authors = ["Jimmy CrakCrn"]
edition = "2021"

[lib]
name = "dotfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-drag = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
walkdir = "2"
notify = "6"
notify-debouncer-full = "0.3"
portable-pty = "0.8"
fuzzy-matcher = "0.3"
dirs = "5"
lazy_static = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
natord = "1.0"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
winreg = "0.55"
zip = { version = "8.3", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6"
tar = "0.4"
flate2 = "1"
bzip2 = "0.5"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
